Fix for bug #45786 (FastCGI process exited unexpectedly)