sapi/cgi/fastcgi.c
@@ -641,7 +641,7 @@ static int fcgi_get_params(fcgi_request *req, unsigned char *p, unsigned char *e
 		memcpy(tmp, p, name_len);
 		tmp[name_len] = 0;
 		s = estrndup((char*)p + name_len, val_len);
-		zend_hash_update(&req->env, tmp, name_len+1, &s, sizeof(char*), NULL);
+		zend_hash_update(req->env, tmp, name_len+1, &s, sizeof(char*), NULL);
 		p += name_len + val_len;
 	}
 	if (tmp != buf && tmp != NULL) {
@@ -665,7 +665,8 @@ static int fcgi_read_request(fcgi_request *req)
 	req->in_len = 0;
 	req->out_hdr = NULL;
 	req->out_pos = req->out_buf;
-	zend_hash_init(&req->env, 0, NULL, (void (*)(void *)) fcgi_free_var, 0);
+	ALLOC_HASHTABLE(req->env);
+	zend_hash_init(req->env, 0, NULL, (void (*)(void *)) fcgi_free_var, 0);
 
 	if (safe_read(req, &hdr, sizeof(fcgi_header)) != sizeof(fcgi_header) ||
 	    hdr.version < FCGI_VERSION_1) {
@@ -702,15 +703,15 @@ static int fcgi_read_request(fcgi_request *req)
 		switch ((((fcgi_begin_request*)buf)->roleB1 << 8) + ((fcgi_begin_request*)buf)->roleB0) {
 			case FCGI_RESPONDER:
 				val = estrdup("RESPONDER");
-				zend_hash_update(&req->env, "FCGI_ROLE", sizeof("FCGI_ROLE"), &val, sizeof(char*), NULL);
+				zend_hash_update(req->env, "FCGI_ROLE", sizeof("FCGI_ROLE"), &val, sizeof(char*), NULL);
 				break;
 			case FCGI_AUTHORIZER:
 				val = estrdup("AUTHORIZER");
-				zend_hash_update(&req->env, "FCGI_ROLE", sizeof("FCGI_ROLE"), &val, sizeof(char*), NULL);
+				zend_hash_update(req->env, "FCGI_ROLE", sizeof("FCGI_ROLE"), &val, sizeof(char*), NULL);
 				break;
 			case FCGI_FILTER:
 				val = estrdup("FILTER");
-				zend_hash_update(&req->env, "FCGI_ROLE", sizeof("FCGI_ROLE"), &val, sizeof(char*), NULL);
+				zend_hash_update(req->env, "FCGI_ROLE", sizeof("FCGI_ROLE"), &val, sizeof(char*), NULL);
 				break;
 			default:
 				return 0;
@@ -762,7 +763,7 @@ static int fcgi_read_request(fcgi_request *req)
 		}
 
 		for (j = 0; j < sizeof(fcgi_mgmt_vars)/sizeof(fcgi_mgmt_vars[0]); j++) {
-			if (zend_hash_exists(&req->env, fcgi_mgmt_vars[j].name, fcgi_mgmt_vars[j].name_len+1) == 0) {
+			if (zend_hash_exists(req->env, fcgi_mgmt_vars[j].name, fcgi_mgmt_vars[j].name_len+1) == 0) {
                 sprintf((char*)p, "%c%c%s%c", fcgi_mgmt_vars[j].name_len, 1, fcgi_mgmt_vars[j].name, fcgi_mgmt_vars[j].val);
                 p += fcgi_mgmt_vars[j].name_len + 3;
 			}
@@ -836,8 +837,10 @@ int fcgi_read(fcgi_request *req, char *str, int len)
 
 static inline void fcgi_close(fcgi_request *req, int force, int destroy)
 {
-	if (destroy) {
-		zend_hash_destroy(&req->env);
+	if (destroy && req->env) {
+		zend_hash_destroy(req->env);
+		FREE_HASHTABLE(req->env);
+		req->env = NULL;
 	}
 
 #ifdef _WIN32
@@ -1191,7 +1194,7 @@ char* fcgi_getenv(fcgi_request *req, const char* var, int var_len)
 
 	if (!req) return NULL;
 
-	if (zend_hash_find(&req->env, (char*)var, var_len+1, (void**)&val) == SUCCESS) {
+	if (zend_hash_find(req->env, (char*)var, var_len+1, (void**)&val) == SUCCESS) {
 		return *val;
 	}
 	return NULL;
@@ -1201,12 +1204,12 @@ char* fcgi_putenv(fcgi_request *req, char* var, int var_len, char* val)
 {
 	if (var && req) {
 		if (val == NULL) {
-			zend_hash_del(&req->env, var, var_len+1);
+			zend_hash_del(req->env, var, var_len+1);
 		} else {
 			char **ret;
 
 			val = estrdup(val);
-			if (zend_hash_update(&req->env, var, var_len+1, &val, sizeof(char*), (void**)&ret) == SUCCESS) {
+			if (zend_hash_update(req->env, var, var_len+1, &val, sizeof(char*), (void**)&ret) == SUCCESS) {
 				return *ret;
 			}
 		}
